--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
     <title>Code Quiz</title>
+    <link rel="stylesheet" href="style.css">
 
     <!-- Bring in JavaScript -->
     <script src="script.js"></script>
 </head>
 <!-- Body -->
+
 <body>
     <!-- Nav -->
-    <nav>
+    <header id="header">
+        <h1 id="title">Coding Quiz</h1>
+        <p id= "time"></p>
         
-        <p>time</p>
-    </nav>
+    </header>
 
     <div id="container">
-        <div id="question">
-            <h4></h4>
-            <a>
-              <img>
-            </a>
+        <div id="quiz">
         </div>
 
         <p>
