Changed sizing of main container.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </header>
 
     <!-- Starting Window -->
-    <div class="container mt-5 p-3 bg-warning mainContainer" id="startContainer">
+    <div class="container mt-5 p-3 bg-warning mainContainer justify-content-center" id="startContainer">
 
         <!-- Instructions -->
         <h5 id="instructions" class="text-center">
