--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-warning" id="resetResultsBtn">Reset Results</button>
+                                <button type="button" class="btn btn-warning" id="resetResultsBtn"><b>Reset Results</b></button>
                             </div>
                         </div>
                     </div>
