--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <!-- Start Quiz Button -->
         <div class="text-center">
-            <button type="button" class="btn btn-outline-dark btn-lg" id="startBtn">Start Quiz</button>
+            <button type="button" class="btn btn-outline-dark btn-lg" id="startBtn"><b>Start Quiz</b></button>
         </div>
     </div>
 
