Updated font weight of 'Submit' button at end of quiz.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <!-- High Score Submit -->
             <div class="input-group-append">
                 <button class="input-group-text btn btn-outline-secondary" type="button"
-                    id="initialsBtn">Submit</button>
+                    id="initialsBtn"><b>Submit</b></button>
             </div>
         </div>
     </div>
