Updated 'Submit' button to be black when hovered over.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 aria-describedby="basic-addon2" id="inputInitials">
             <!-- High Score Submit -->
             <div class="input-group-append">
-                <button class="input-group-text btn btn-outline-secondary" type="button"
+                <button class="input-group-text btn btn-outline-dark" type="button"
                     id="initialsBtn"><b>Submit</b></button>
             </div>
         </div>
