Updated font-size of main title and timer.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <!-- Title -->
             <div class="col-md-4">
-                <h1 class="text-center"><a href="index.html" class="text-dark">Coding Quiz</a></h1>
+                <h1 class="text-center" id="titleHeader"><a href="index.html" class="text-dark">Coding Quiz</a></h1>
             </div>
 
             <!-- Timer -->
